--- a/js/package.json
+++ b/js/package.json
@@ -28,6 +28,7 @@
     "tabulator-tables": "^5.0.7",
     "terser-webpack-plugin": "^5.2.5",
     "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "@easepick/bundle": "^1.2.1"
   }
 }
